<resources>
    <string name="app_name">Quizz</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="QUESTION_SET_KEY">q_key</string>
    <string name="doneQuizz">Done</string>
    <string name="timer">%1$s:%2$s:%3$s</string>
    <string name="total_question">TOTAL_QUESTIONS</string>
    <string name="right_ans">RIGHT_ANS</string>
    <string name="set_total_question">Total Question %1$d</string>
    <string name="set_right_ans">Right Answer %1$d</string>
    <string name="emailHint">Email</string>
    <string name="passwordHint">password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="log_in">Log In</string>
    <string name="create_an_account">Create an Account</string>
    <string name="name">Name</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="empty_editText_Error">This Field can\'t be empty</string>
    <string name="email_formatting_error">Badly Formatted Email</string>
    <string name="passoword_not_matched">Password Not Matched</string>
    <string name="Internal_Error">Internal Error</string>
    <string name="dialog_sign_up">Wait.Signing Up</string>
    <string name="login_dialog_text">Authenticating</string>
    <string name="reset_password">Reset password</string>
    <string name="reset_password_dialog">Reseting Password</string>
    <string name="change_password">Change Password</string>
    <string name="password_change_note">Please logout and login again to make password change work properly.</string>
    <string name="password_change_dialog_text">Please Wait</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="get_ready_for_quizz">Best of luck</string>
    <string name="question_set_name">q_name</string>
    <string name="change_password_subtext">chnage your user login password</string>
    <string name="welcome">Welcome</string>
    <string name="score_label">Score</string>
    <string name="question_set_label">Question Set</string>
    <string name="solved_set_label">Solved Set</string>
    <string name="question_set_point">Each question point</string>
    <string name="question_set_score_label">Your score</string>
    <string name="queestionSet_point">q_point</string>
    <string name="questionSet_key">question_key</string>
    <string name="ProfilePicsharedTransitionKey">profilePicTransitionKey</string>
</resources>
