<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/background_drawable"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context="com.example.rdas6313.quizz.SignUpActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/logoStyle"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="32dp"
            android:id="@+id/textView9" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            style="@style/ediTextStyle"
            android:background="@drawable/edit_text_background"
            android:hint="@string/name"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toBottomOf="@+id/textView9" />
        <EditText
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ediTextStyle"
            android:background="@drawable/edit_text_background"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/name"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/name"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        <EditText
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:id="@+id/password"
            style="@style/ediTextStyle"
            android:background="@drawable/edit_text_background"
            android:hint="@string/passwordHint"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/email"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/email"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email" />
        <EditText
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/ic_https_black_24dp"
            android:id="@+id/confirm_password"
            style="@style/ediTextStyle"
            android:background="@drawable/edit_text_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/password"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/password"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/password" />
        <Button
            android:visibility="visible"
            android:id="@+id/signup"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ediTextStyle"
            android:textColor="@android:color/white"
            android:background="@drawable/btn_background"
            android:text="@string/sign_up"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/confirm_password"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/confirm_password"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>
