<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    android:id="@+id/coordinatorLayout"
    tools:context="com.example.rdas6313.quizz.SignUpActivity">
    <android.support.constraint.ConstraintLayout
        android:background="@android:color/holo_purple"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/profilePic"
            android:layout_width="0dp"
            android:layout_height="232dp"
            android:layout_marginTop="-4dp"
            android:scaleType="fitXY"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/avatar" />

        <ImageButton
                android:id="@+id/addProfilePicBtn"
                android:background="@drawable/add_photo_background"
                android:layout_gravity="center"
                android:padding="16dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_add_a_photo_black_24dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toTopOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/guideline"
                android:layout_marginTop="0dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.94" />
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/name"
            style="@style/ediTextStyle"
            android:background="@drawable/editext_background"
            android:hint="@string/name"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@+id/addProfilePicBtn"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent" />
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/nameIcon"
            android:src="@drawable/ic_mode_edit_black_24dp"
            android:layout_alignRight="@+id/name"
            android:layout_above="@+id/email"
            android:padding="16dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/name"
            android:layout_marginBottom="8dp"
            app:layout_constraintTop_toTopOf="@+id/name"
            android:layout_marginTop="0dp"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/name" />
        <EditText
            android:layout_below="@+id/name"
            android:drawablePadding="16dp"
            android:drawableLeft="@drawable/ic_email_black_24dp"
            android:id="@+id/email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            style="@style/ediTextStyle"
            android:background="@drawable/editext_background"
            android:hint="@string/emailHint"
            android:inputType="textEmailAddress"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="16dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/name" />
        <Button
            android:layout_below="@+id/email"
            style="@style/ediTextStyle"
            android:background="@color/NoActionBarAccentColor"
            android:textColor="@android:color/white"
            android:visibility="visible"
            android:id="@+id/changePasswordBtn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginRight="16dp"
            android:layout_marginLeft="16dp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/email"
            app:layout_constraintVertical_bias="0.35000002" />

        <android.support.constraint.Guideline
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/guideline"
            app:layout_constraintGuide_begin="232dp"
            android:orientation="horizontal" />

    </android.support.constraint.ConstraintLayout>
    </android.support.design.widget.CoordinatorLayout>
