<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/light_gray"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <View
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="160dp"
            android:background="@color/colorPrimary"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <ProgressBar
            android:visibility="gone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:progress="50"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"
            app:layout_constraintLeft_toLeftOf="@+id/profilePic"
            app:layout_constraintRight_toRightOf="@+id/profilePic"
            app:layout_constraintTop_toBottomOf="@+id/addProfilePicBtn"
            android:id="@+id/progressBar"
            app:layout_constraintHorizontal_bias="0.0" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/profilePic"
            android:layout_width="160dp"
            android:layout_height="160dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:src="@drawable/avatar"
            app:civ_border_color="@android:color/white"
            app:civ_border_width="2dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <ImageButton
            android:elevation="2dp"
            android:id="@+id/addProfilePicBtn"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/add_photo_background"
            android:src="@drawable/ic_add_a_photo_black_24dp"
            app:layout_constraintHorizontal_bias="0.49"
            app:layout_constraintLeft_toLeftOf="@+id/profilePic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp" />

        <android.support.v7.widget.CardView
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@android:color/white"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/progressBar"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0"
            android:id="@+id/cardView2"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:textColor="@color/gray"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/name"
                    android:id="@+id/textView11"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:layout_marginStart="16dp" />
                <EditText
                    android:textSize="20sp"
                    android:lines="1"
                    android:textColor="@android:color/black"
                    android:paddingRight="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@android:color/transparent"
                    android:text="Random Person"
                    android:id="@+id/name"
                    app:layout_constraintLeft_toLeftOf="@+id/textView11"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView11" />
                <ImageButton
                    android:padding="8dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_mode_edit_black_24dp"
                    android:background="@android:color/transparent"
                    android:id="@+id/nameIcon"
                    app:layout_constraintBottom_toBottomOf="@+id/name"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="@+id/name"
                    android:layout_marginRight="16dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="16dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/emailHint"
                    android:textColor="@color/gray"
                    android:textSize="16sp"
                    android:id="@+id/textView10"
                    app:layout_constraintLeft_toLeftOf="@+id/name"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/name" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="abc@xyz.com"
                    android:textColor="@android:color/black"
                    android:textSize="18sp"
                    app:layout_constraintLeft_toLeftOf="@+id/textView10"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView10"
                    android:id="@+id/email"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="16dp" />
                <ImageView
                    android:visibility="gone"
                    android:id="@+id/verifiedEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_done_green_a700_24dp"
                    app:layout_constraintTop_toTopOf="@+id/email"
                    app:layout_constraintBottom_toBottomOf="@+id/email"
                    app:layout_constraintRight_toRightOf="parent" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:clickable="true"
            android:focusable="true"
            android:foreground="@drawable/cardview_ripple_background"
            app:cardBackgroundColor="@color/cardview_light_background"
            android:id="@+id/changePasswordBtn"
            app:cardCornerRadius="5dp"
            app:cardElevation="5dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/cardView2"
            android:layout_marginRight="0dp"
            app:layout_constraintRight_toRightOf="@+id/cardView2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintVertical_bias="0.0">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteY="8dp"
                tools:layout_editor_absoluteX="8dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password"
                    android:textSize="18sp"
                    android:textColor="@color/dark_gray"
                    android:layout_marginLeft="16dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="16dp"
                    android:id="@+id/textView13"
                    android:layout_marginStart="16dp" />
                <TextView
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:text="@string/change_password_subtext"
                    android:textColor="@color/light_light_gray"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="@+id/textView13"
                    android:layout_marginTop="4dp"
                    app:layout_constraintTop_toBottomOf="@+id/textView13"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintRight_toRightOf="@+id/textView13"
                    app:layout_constraintHorizontal_bias="0.0"
                    android:id="@+id/textView14"
                    app:layout_constraintVertical_bias="0.0" />
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_keyboard_arrow_right_light_blue_a100_24dp"
                    app:layout_constraintBottom_toBottomOf="@+id/textView14"
                    android:layout_marginBottom="8dp"
                    app:layout_constraintTop_toTopOf="@+id/textView13"
                    android:layout_marginTop="8dp"
                    android:layout_marginRight="8dp"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_marginEnd="8dp" />
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.design.widget.CoordinatorLayout>